# tfm-stockformer

./: .gitignore  LICENSE  MultiTask_Stockformer_train.py  README.md  SETUP.md  Seguimiento TFM - Stockformer SP500.pptx  app.py  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.streamlit/: config.toml
Stockformermodel/: Multitask_Stockformer_models.py
config/: Multitask_Stock.conf  Multitask_Stock_SP500.conf  Multitask_Stock_SP500_reduced.conf  experiment_E1_mse_baseline.conf  experiment_E2_ranking_baseline.conf  experiment_E3_dynamic_graph.conf  experiment_E4_rich_features.conf  experiment_E5_all_improvements.conf
docs/: NEW RESEARCH - GAPS.md
lib/: Multitask_Stockformer_utils.py  config.py  decomposition.py  dynamic_graph.py  graph_utils.py  regime.py
notebooks/: train_colab.ipynb
results/: ablation_results.csv
scripts/: audit_alignment.py  build_alpha158.py  build_alpha360.py  build_macro_features.py  build_pipeline.py  compute_ic.py  run_ablation.py  run_ablation_analysis.py  run_backtest.py  run_ensemble.py  run_inference.py  run_lightgbm_baseline.py  run_walkforward.py  smoke_test.py
tests/: conftest.py  test_app.py  test_backtest.py  test_build_alpha360.py  test_compute_ic.py  test_data_pipeline.py  test_download_ohlcv.py  test_model_training.py  test_phase1_infra.py  test_pipeline.py
(+98 files in other folders)
